src/test/ui/error-codes/E0622.stderr
error[E0622]: intrinsic must be a function
  --> $DIR/E0622.rs:13:5
   |
LL |     pub static breakpoint : unsafe extern "rust-intrinsic" fn();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected a function

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0622"
